Updated Team Members, Maps, Mentors, Email ID, Events

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -55,7 +55,7 @@
                     more than happy to address your concerns. </p><br>
                 <p>For any complaints or suggestions, you may fill up this form: &nbsp;
                     <a href="https://forms.gle/vX4JE4LUteCVdG4s7">https://forms.gle/vX4JE4LUteCVdG4s7</a></p>
-                <p>For more queries, you may contact us on &nbsp; <a href="mailto:tca@rru.ac.in">tca@rru.ac.in</a></p><br>
+                <p>For more queries, you may contact us on &nbsp; <a href="mailto:tca.sitaics@rru.ac.in">tca.sitaics@rru.ac.in</a></p><br>
                 <h4>
                     <p>Regards,</p>
                 </h4>
