--- a/team-tca.html
+++ b/team-tca.html
@@ -125,20 +125,63 @@
     <br>
     <!---Mentor pic --->
     <div class="cool">
-        <div class="mb-5">
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="Image/Priyank.jpeg" alt="Avatar" style="width:300px;height:300px;  filter: grayscale(100%);">
+        <div class="card-deck d-flex">
+            <div class="mb-5">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="Image/Vivek.jpg" alt="Avatar" style="width:300px;height:300px;  filter: grayscale(100%);">
+                        </div>
+                        <div class="flip-card-back">
+                            <h2>Vivek Joshi</h2>
+                            <h5 class="text-grey">Assistant Professor & Mentor</h5>
+                        </div>
                     </div>
-                    <div class="flip-card-back">
-                        <h2>Priyank Parmar</h2>
-                        <h5 class="text-grey">Assistant Professor & Mentor</h5>
+                </div>
+            </div>
+            <div class="mb-5">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="Image/Naveen.jpg" alt="Avatar" style="width:300px;height:300px;  filter: grayscale(100%);">
+                        </div>
+                        <div class="flip-card-back">
+                            <h2>Naveen Chand Balla</h2>
+                            <h5 class="text-grey">Assistant Professor & Mentor</h5>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- <div class="cool">
+        <div class="mb-5">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="Image/Vivek.jpg" alt="Avatar" style="width:300px;height:300px;  filter: grayscale(100%);">
+                    </div>
+                    <div class="flip-card-back">
+                        <h2>Vivek Joshi</h2>
+                        <h5 class="text-grey">Assistant Professor & Mentor</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-5">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="Image/Naveen.jpg" alt="Avatar" style="width:300px;height:300px;  filter: grayscale(100%);">
+                    </div>
+                    <div class="flip-card-back">
+                        <h2>Naveen Chand Balla</h2>
+                        <h5 class="text-grey">Assistant Professor & Mentor</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 
 
     <div style="font-family: 'Grenze Gotisch', cursive; font-weight: 400; text-align: center; color:#09b8f2;">
@@ -167,93 +210,9 @@
             twitter: "https://twitter.com/AstarkIV",
             linkedin: "https://www.linkedin.com/in/mitpatel67/",
         }, {
-            image: "Atri.jpg",
-            name: "Atri Joshi",
-            pos: "HR",
-            github: "https://github.com/akjoshi12",
-            twitter: "https://google.com",
-            linkedin: "https://www.linkedin.com/in/atri-j-4b67b8118/",
-            instagram: "https://www.instagram.com/a_k_joshi12/?hl=en",
-            facebook: "https://www.facebook.com/atri.joshi.90/", //// facebook
-        }, {
-            image: "Riti.jpg",
-            name: "Riti	Dobariya",
-            pos: "HR",
-            github: "https://github.com/RitiDobariya",
-            linkedin: "https://www.linkedin.com/in/riti-dobariya-851755197/",
-            instagram: "https://instagram.com/alafred_doll_?igshid=t8z8xxeq9zbn",
-        }, {
-            image: "Bhakti.jpg",
-            name: "Bhakti Rana",
-            pos: "Creative & Graphics",
-            twitter: "https://twitter.com/philogamist",
-            linkedin: "https://www.linkedin.com/in/bhaktirana/",
-            instagram: "https://www.instagram.com/bhaktirana/",
-            behance: "https://www.behance.net/brana66",
-        }, {
-            image: "Drashti.jpg",
-            name: "Drashti Dobariya",
-            pos: "Content Writer",
-            github: "https://github.com/DrashtiDobariya",
-            twitter: "https://twitter.com/drashti_____",
-            instagram: " https://instagram.com/drashti_dobariya_",
-        }, {
-            image: "Prinesha.jpg",
-            name: "Prinesha Dobariya",
-            pos: "Content Writer",
-            github: "https://github.com/Prinesha5102",
-            linkedin: "https://www.linkedin.com/in/prinesha-dobariya-34a5851a2",
-        }, {
-            image: "Akshat.jpg",
-            name: "Akshat Soni",
-            pos: "Social Media Manager",
-            github: "https://github.com/akshatsoni64",
-            twitter: "https://twitter.com/akshat_soni64",
-            linkedin: "https://linkedin.com/in/akshatsoni64",
-            instagram: "https://instagram.com/akshatsoni64",
-        }, {
-            image: "Tanay.jpg",
-            name: "Tanay Yadav",
-            pos: "Social Media Manager",
-            github: "https://github.com/Dark10Shooter",
-            twitter: "https://twitter.com/TanayYadav1010",
-            linkedIn: "https://www.linkedin.com/in/tanay-yadav-714275181",
-            instagram: "https://www.instagram.com/dark10shooter/",
-            facebook: "https://m.facebook.com/tanayyadav1010", //// facebook
-        }, {
-            image: "Viral.jpeg",
-            name: "Viral Parmar",
-            pos: "Live Sessions",
-            github: "https://github.com/vral-parmar",
-            twitter: "https://twitter.com/vral_parmar",
-            linkedin: "https://www.linkedin.com/in/viralparmar93/",
-            instagram: "https://www.instagram.com/vral_parmar/",
-        }, {
-            image: "Ridham.jpg",
-            name: "Ridham Joshi",
-            pos: "Webinars & Workshops",
-            github: "https://github.com/rj-joshi",
-            twitter: "https://twitter.com/rj_joshi_5",
-            linkedin: "https://www.linkedin.com/in/ridham-joshi-41b6b8152/",
-            instagram: "https://www.instagram.com/ridham125/",
-        }, {
-            image: "Gayatri.jpg",
-            name: "Gayatri Priyadarsini",
-            pos: "Web Developer",
-            github: "https://github.com/KK-GAYATRI-P/",
-            linkedin: "https://www.linkedin.com/in/gayatri-priyadarsini-22638b193",
-        }, {
-            image: "Rutambhara.jpg",
-            name: "Rutambhara Patil",
-            pos: "Web Developer",
-            github: "https://github.com/Rutambhara-10",
-            twitter: "https://twitter.com/RutambharaPatil",
-            linkedin: "https://www.linkedin.com/in/rutambhara-patil-6a1483192/",
-            instagram: "https://www.instagram.com/_.iamrutu._/",
-        }, {
             image: "Zaid.jpg",
             name: "MohammedZaid Shaikh",
-            pos: "Web Developer",
+            pos: "",
             github: "https://github.com/Zaidmessi",
             twitter: "https://twitter.com/Zaidmessi97",
             linkedin: "https://www.linkedin.com/in/zaid-shaikh-072302147",
@@ -261,81 +220,81 @@
         }, {
             image: "Jenil.jpg",
             name: "Jenil Patel",
-            pos: "Web Developer",
+            pos: "",
             github: "https://github.com/coolJp9",
             twitter: "https://twitter.com/_jEnIl_PaTeL",
             linkedin: "https://www.linkedin.com/in/cooljp9",
         }, {
             image: "Raj.jpg",
             name: "Raj Kotadiya",
-            pos: "Web Developer",
+            pos: "",
             github: "https://github.com/Rajkotadiya",
             twitter: "https://twitter.com/Rajkotadiya16",
             linkedin: "https://www.linkedin.com/in/raj-kotadiya-397504172",
             instagram: "https://www.instagram.com/raj_kotadiya001",
         }, {
-            image: "RajP.jpg",
-            name: "Raj Patel",
-            pos: "Web Developer",
-            linkedin: "https://www.linkedin.com/in/raj-patel-934174199",
-            instagram: "https://www.instagram.com/rajpatel3131/",
-        }, {
-            image: "Nidhi.jpg",
-            name: "Nidhi Shah",
-            pos: "CTF Developer & Manager",
-            github: "https://github.com/Nshah-02",
-            linkedin: "https://www.linkedin.com/in/nidhi-shah-107b431a1",
-        }, {
-            image: "Rushi.PNG",
-            name: "Rushi Mamtora",
-            pos: "CTF Developer & Bug Bounty",
-            github: "https://github.com/Rushimamtora/",
-            twitter: "https://twitter.com/MamtoraRushi",
-            linkedin: "https://www.linkedin.com/in/rushi-mamtora-1a7132171/",
-            instagram: "https://www.instagram.com/rushi_mamtora/",
-        }, {
-            image: "Mrunal.jpg",
-            name: "Mrunal Chawda",
-            pos: "CTF Developer & Bug Bounty",
-            github: "https://github.com/chawdamrunal",
-            twitter: "https://twitter.com/mrunal110",
-            linkedin: "https://www.linkedin.com/in/chawdamrunal/",
-            instagram: "https://www.instagram.com/mrunal_chawda/",
-        }, {
-            image: "Rahul.jpg",
-            name: "Rahul Vaghela",
-            pos: "CTF Developer & Forensics",
-            github: "https://github.com/Rahul1899",            
-            linkedin: "http://www.linkedin.com/in/rahul-vaghela18",
-            instagram: "https://www.instagram.com/rahul_vaghela_bapu/",
-        }, {
-            image: "Nilay.jpg",
-            name: "Nilay Shah",
-            pos: "CTF Developer & Forensics",
-            github: "https://github.com/nilayshah102",            
-            linkedin: "https://www.linkedin.com/in/shah-nilay-154011154",
-            instagram: "https://www.instagram.com/nii_l_ayyy/",
-            
+            image: "Atri.jpg",
+            name: "Atri Joshi",
+            pos: "",
+            github: "https://github.com/akjoshi12",
+            twitter: "https://google.com",
+            linkedin: "https://www.linkedin.com/in/atri-j-4b67b8118/",
+            instagram: "https://www.instagram.com/a_k_joshi12/?hl=en",
+            facebook: "https://www.facebook.com/atri.joshi.90/", //// facebook
         }, {
             image: "Kesha.jpg",
             name: "Kesha Kaneria",
-            pos: "CTF Developer",
+            pos: "",
             github: "https://github.com/keshakaneria",
             twitter: "https://twitter.com/KaneriaKesha",
             linkedin: "https://www.linkedin.com/in/kesha-k-kaneria/",
         }, {
-            image: "Viren.jpg",
-            name: "Viren Munjani",
-            pos: "CTF Developer",
-            linkedin: "https://www.linkedin.com/in/viren-munjani-170759170",
-
+            image: "Nidhi.jpg",
+            name: "Nidhi Shah",
+            pos: "",
+            github: "https://github.com/Nshah-02",
+            linkedin: "https://www.linkedin.com/in/nidhi-shah-107b431a1",
         }, {
             image: "Waris.jpg",
             name: "Wariskhan Pathan",
-            pos: "CTF Developer",
+            pos: "",
             github: "https://github.com/waris0210",
             linkedin: "https://www.linkedin.com/in/wariskhan-pathan-9837a01a5",
             instagram: "https://www.instagram.com/waris_0210/",
+        }, {
+            image: "RajP.jpg",
+            name: "Raj Patel",
+            pos: "",
+            linkedin: "https://www.linkedin.com/in/raj-patel-934174199",
+            instagram: "https://www.instagram.com/rajpatel3131/",
+        }, {
+            image: "Riti.jpg",
+            name: "Riti	Dobariya",
+            pos: "",
+            github: "https://github.com/RitiDobariya",
+            linkedin: "https://www.linkedin.com/in/riti-dobariya-851755197/",
+            instagram: "https://instagram.com/alafred_doll_?igshid=t8z8xxeq9zbn",
+        }, {
+            image: "Drashti.jpg",
+            name: "Drashti Dobariya",
+            pos: "",
+            github: "https://github.com/DrashtiDobariya",
+            twitter: "https://twitter.com/drashti_____",
+            instagram: " https://instagram.com/drashti_dobariya_",
+        }, {
+            image: "Prinesha.jpg",
+            name: "Prinesha Dobariya",
+            pos: "",
+            github: "https://github.com/Prinesha5102",
+            linkedin: "https://www.linkedin.com/in/prinesha-dobariya-34a5851a2",
+        }, {
+            image: "Rutambhara.jpg",
+            name: "Rutambhara Patil",
+            pos: "",
+            github: "https://github.com/Rutambhara-10",
+            twitter: "https://twitter.com/RutambharaPatil",
+            linkedin: "https://www.linkedin.com/in/rutambhara-patil-6a1483192/",
+            instagram: "https://www.instagram.com/_.iamrutu._/",
         }, ];
 
         files.forEach(file => {
