--- a/about.html
+++ b/about.html
@@ -132,8 +132,7 @@
                     <div class="card reach-us" style="font-family:courier;height: 750px;">
                         <div class="card-header font-weight-bold"><i class="fa fa-map-marker"></i> &nbsp;Contact Us</div>
                         <div style="height: 500px;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14673.544368585306!2d72.8846204!3d23.1561046!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ded5155dd1a3e61!2sRaksha%20Shakti%20University!5e0!3m2!1sen!2sin!4v1580035523590!5m2!1sen!2sin" style="border:0;"
-                                allowfullscreen="" width="100%" height="500px"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3668.431116501104!2d72.88281031433668!3d23.154460317197664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e79669090a90d%3A0xff7f6e64bed7fcf6!2sRashtriya%20Raksha%20University%20(RRU)!5e0!3m2!1sen!2sin!4v1631863689135!5m2!1sen!2sin" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                         <!-- 031321 -->
                         <div style="background-color: transparent;height: 100%;">
@@ -143,7 +142,7 @@
 
                                 <p class="card-text">Lavad-Dahegam, Gandhinagar – 382305</p>
                                 <p class="card-text mb-auto">
-                                    <b>Email: </b><a href="mailto:tca.sitaics@gmail.com">tca.sitaics@gmail.com</a>
+                                    <b>Email: </b><a href="mailto:tca.sitaics@rru.ac.in">tca.sitaics@rru.ac.in</a>
                                 </p>
                             </div>
                         </div>
