--- a/tools.html
+++ b/tools.html
@@ -94,12 +94,12 @@
                             <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
                             <a class="more-link" href="#">Read more →</a>
                         </div>
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="C:\Users\cooljp\Desktop\image\1.jpg" alt="image"><!--//media-body -->
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="image2\1.jpg" alt="image"><!--//media-body -->
                     </div><!--//media-->
                 </div><!--//item-->
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="C:\Users\cooljp\Desktop\image\2.png" alt="image">
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="image2\2.png" alt="image">
                         <div class="media-body ">
                             <h3 class="title mb-1"><a href="#">A Guide to Becoming a Full-Stack Developer</a></h3>
                             <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span><a href="#"><i class="fa fa-star" aria-hidden="true"> </i><i class="fa fa-star" aria-hidden="true"> </i><i class="fa fa-star" aria-hidden="true"> </i></a></span></div>
@@ -118,12 +118,12 @@
                             <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
                             <a class="more-link" href="#">Read more →</a>
                         </div>
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="C:\Users\cooljp\Desktop\image\1.jpg" alt="image"><!--//media-body -->
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="image2\1.jpg" alt="image"><!--//media-body -->
                     </div><!--//media-->
                 </div><!--//item-->
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="C:\Users\cooljp\Desktop\image\2.png" alt="image">
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="image2\2.png" alt="image">
                         <div class="media-body ">
                             <h3 class="title mb-1"><a href="#">A Guide to Becoming a Full-Stack Developer</a></h3>
                             <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span><a href="#"><i class="fa fa-star" aria-hidden="true"> </i><i class="fa fa-star" aria-hidden="true"> </i><i class="fa fa-star" aria-hidden="true"> </i></a></span></div>
@@ -141,12 +141,12 @@
                             <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
                             <a class="more-link" href="#">Read more →</a>
                         </div>
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="C:\Users\cooljp\Desktop\image\1.jpg" alt="image"><!--//media-body -->
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="image2\1.jpg" alt="image"><!--//media-body -->
                     </div><!--//media-->
                 </div><!--//item-->
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="C:\Users\cooljp\Desktop\image\2.png" alt="image">
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="image2\2.png" alt="image">
                         <div class="media-body ">
                             <h3 class="title mb-1"><a href="#">A Guide to Becoming a Full-Stack Developer</a></h3>
                             <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span><a href="#"><i class="fa fa-star" aria-hidden="true"> </i><i class="fa fa-star" aria-hidden="true"> </i><i class="fa fa-star" aria-hidden="true"> </i></a></span></div>
