--- a/security-practices.html
+++ b/security-practices.html
@@ -57,17 +57,8 @@
                     <a href="events.html" class="nav-item nav-link  px-3 "><i class="fa fa-calendar"></i> Events</a>
                     <a href="achievements.html" class="nav-item nav-link px-3 "><i class="fa fa-trophy"></i> Achievements</a>
                     <a href="code-of-conduct.html" class="nav-item nav-link  px-3  "><i class="fa fa-terminal"></i> Code of Conduct</a>
-                    <a href="team-tca.html" class="nav-item nav-link  px-3"><i class="fa fa-users"></i> Team TCA</a>
-                </div>
-            </div>
-        </nav>
-
-        <nav class="navbar navbar-expand-md navbar-dark  bg-dark mb-0 radius-0 " style="font-family:Courier;">
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ml-auto">
+                    <a href="team-tca.html" class="nav-item nav-link  px-3"><i class="fa fa-users"></i> Team TCA</a>               
+                    <br>
                     <a href="news.html" class="nav-item nav-link px-3"><i class="fa fa-newspaper-o"></i> News</a>
                     <a href="blog.html" class="nav-item nav-link active px-3"> <i class="fa fa-rss-square"></i> Blog</a>
                     <a href="tools.html" class="nav-item nav-link  px-3"><i class="fa fa-wrench"></i> Tools</a>
@@ -106,7 +97,7 @@
     <script src="js/script.js"></script>
     <script>
         $(document).ready(function() {
-            createNav(["", "", "", "active", "", ""], "");
+            createNav(["", "", "", "", "", "","active", "","", ""], "");
             // createFooter();
         });
     </script>
