--- a/security-practices.html
+++ b/security-practices.html
@@ -1,6 +1,6 @@
 <html lang="en" dir="ltr"><head>
     <meta charset="utf-8">
-    <title>TCA - security-practices</title>
+    <title>TCA - Security Practices</title>
     <meta name="description" content="An Information Security Student's Club at Rashtriya Raksha University">
     <meta name="author" content="The Cyber Alliance - TCA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -44,30 +44,7 @@
 
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark  bg-dark mb-0 radius-0 " style="font-family:Courier;">
-            <a href="index.html" class="navbar-brand">The Cyber Alliance</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link  px-3"><i class="fa fa-home"></i> Home</a>
-                    <a href="about.html" class="nav-item nav-link  px-3 "> <i class="fa fa-info"></i> About TCA</a>
-                    <a href="events.html" class="nav-item nav-link  px-3 "><i class="fa fa-calendar"></i> Events</a>
-                    <a href="achievements.html" class="nav-item nav-link px-3 "><i class="fa fa-trophy"></i> Achievements</a>
-                    <a href="code-of-conduct.html" class="nav-item nav-link  px-3  "><i class="fa fa-terminal"></i> Code of Conduct</a>
-                    <a href="team-tca.html" class="nav-item nav-link  px-3"><i class="fa fa-users"></i> Team TCA</a>               
-                    <br>
-                    <a href="news.html" class="nav-item nav-link px-3"><i class="fa fa-newspaper-o"></i> News</a>
-                    <a href="blog.html" class="nav-item nav-link active px-3"> <i class="fa fa-rss-square"></i> Blog</a>
-                    <a href="tools.html" class="nav-item nav-link  px-3"><i class="fa fa-wrench"></i> Tools</a>
-                    <a href="security-practices.html" class="nav-item nav-link  px-3"><i class="fa fa-shield"></i> Security Practices</a>
-                    <a href="quiz.html" class="nav-item nav-link px-3"><i class="fa fa-question"></i> Quiz</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+
     
 <div class="container">
     <div class="list-group">
@@ -97,7 +74,8 @@
     <script src="js/script.js"></script>
     <script>
         $(document).ready(function() {
-            createNav(["", "", "", "", "", "","active", "","", ""], "");
+            createNav(["", "", "", "", "", ""], "");
+            createNav1(["", "", "", "active", ""], "");
             // createFooter();
         });
     </script>
