--- a/security-practices.html
+++ b/security-practices.html
@@ -46,25 +46,135 @@
 <body>
     <header></header>
     
-<div class="container">
-    <div class="list-group">
-        <button type="button" class="list-group-item list-group-item-action">Install well known anti-virus software and keep all computer software patched</button>
-        <button type="button" class="list-group-item list-group-item-action">Update operating systems, applications, and antivirus software regularly</button>
-        <button type="button" class="list-group-item list-group-item-action">Use strong password protection and authentication</button>
-        <button type="button" class="list-group-item list-group-item-action">Log off public computers</button>
-        <button type="button" class="list-group-item list-group-item-action">Back up important information</button>
-        <button type="button" class="list-group-item list-group-item-action">Use a firewall to protect your computer</button>
-        <button type="button" class="list-group-item list-group-item-action">Avoid pop-ups, unknown emails, and links</button>
-        <button type="button" class="list-group-item list-group-item-action">Pay attention to browser warnings and shop smart online</button>
-        <button type="button" class="list-group-item list-group-item-action">Use secure Wi-Fi connections at home and away</button>
-        <button type="button" class="list-group-item list-group-item-action">Use a VPN to protect your home network</button>
-        <button type="button" class="list-group-item list-group-item-action">Limit social network information</button>
-        <button type="button" class="list-group-item list-group-item-action">Download files legally (Avoid peer-to-peer (P2P) networks)</button>
-        <button type="button" class="list-group-item list-group-item-action">Avoid Phishing scams - beware of suspicious emails and phone calls</button>
-        <button type="button" class="list-group-item list-group-item-action">Use a trusted web browser</button>
-        <button type="button" class="list-group-item list-group-item-action">Never leave devices unattended</button>
-        <button type="button" class="list-group-item list-group-item-action">Set-up Two Factor Authentication on online platforms like Social Media, Ecommerce Accounts, etc.</button>
-    </div>
+<div class="container col-sm-6 justify-content-md-center">
+<br>
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Install well known anti-virus software and keep all computer software patched</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Update operating systems, applications, and antivirus software regularly</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Use strong password protection and authentication</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Log off public computers</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Back up important information</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Use a firewall to protect your computer</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Avoid pop-ups, unknown emails, and links</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Pay attention to browser warnings and shop smart online</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Use secure Wi-Fi connections at home and away</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Use a VPN to protect your home network</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Limit social network information</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Download files legally (Avoid peer-to-peer (P2P) networks)</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Avoid Phishing scams - beware of suspicious emails and phone calls</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Use a trusted web browser</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Never leave devices unattended</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
+<br>            
+<div class="card text-center bg-info">
+  <div class="card-body">
+    <p class="card-text">
+                Set-up Two Factor Authentication on online platforms like Social Media, Ecommerce Accounts, etc.</p>
+  </div>
+  <div class="card-footer text-muted">2 days ago</div>
+</div>
 </div>
 
 
