--- a/security-practices.html
+++ b/security-practices.html
@@ -46,7 +46,7 @@
 <body>
     <header></header>
     
-<div class="container col-sm-6 justify-content-md-center">
+<div class="container justify-content-md-center">
 <br>
 <div class="card text-center bg-info">
   <div class="card-body">
