--- a/tools.html
+++ b/tools.html
@@ -132,7 +132,7 @@
     <script src="js/script.js"></script>
     <script>
         $(document).ready(function() {
-            createNav(["", "", "", "active", "", ""], "");
+            createNav(["", "", "", "", "", ""], "");
             createNav1(["", "", "active", "",  ""], "");
             // createFooter();
         });
