--- a/news.html
+++ b/news.html
@@ -34,39 +34,7 @@
 
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark  bg-dark mb-0 radius-0 " style="font-family:Courier;">
-            <a href="index.html" class="navbar-brand">The Cyber Alliance</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link  px-3"><i class="fa fa-home"></i> Home</a>
-                    <a href="about.html" class="nav-item nav-link  px-3 "> <i class="fa fa-info"></i> About TCA</a>
-                    <a href="events.html" class="nav-item nav-link  px-3 "><i class="fa fa-calendar"></i> Events</a>
-                    <a href="achievements.html" class="nav-item nav-link px-3 "><i class="fa fa-trophy"></i> Achievements</a>
-                    <a href="code-of-conduct.html" class="nav-item nav-link  px-3  "><i class="fa fa-terminal"></i> Code of Conduct</a>
-                    <a href="team-tca.html" class="nav-item nav-link  px-3  "><i class="fa fa-users"></i> Team TCA</a>
-                </div>
-            </div>
-        </nav>
-
-        <nav class="navbar navbar-expand-md navbar-dark  bg-dark mb-0 radius-0 " style="font-family:Courier;">
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse1">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse1">
-                <div class="navbar-nav ml-auto">
-                    <a href="news.html" class="nav-item nav-link active px-3"><i class="fa fa-newspaper-o"></i> News</a>
-                    <a href="blog.html" class="nav-item nav-link  px-3"> <i class="fa fa-rss-square"></i> Blog</a>
-                    <a href="tools.html" class="nav-item nav-link  px-3"><i class="fa fa-wrench"></i> Tools</a>
-                    <a href="security-practices.html" class="nav-item nav-link  px-3"><i class="fa fa-shield"></i> Security Practices</a>
-                    <a href="quiz.html" class="nav-item nav-link px-3"><i class="fa fa-question"></i> Quiz</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <header></header>
     
 <div class="col-sm|md|lg|xl-auto cool1">
     <div class="card-deck">
@@ -132,6 +100,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "", "active", "", ""], "");
+            createNav1(["active", "", "", "", ""], "");
             // createFooter();
         });
     </script>
