--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
     <script src="js/script.js"></script>
     <script>
         $(document).ready(function() {
-            createNav(["", "", "", "active", "", ""], "");
+            createNav(["", "", "", "", "", ""], "");
             createNav1(["active", "", "", "", ""], "");
             // createFooter();
         });
